2000-05-01  Chema Celorio  <chema@celorio.com>

	* document.c (gedit_document_new): leak

2000-05-01  Jason Leach  <leach@wam.umd.edu>

	* view.c (doc_insert_text_cb): added a call to insert_into_buffer,
	this is important because otherwise doc->buf->str otherwise won't
	contain the contents of your document until you save or something,
	so like the e-mail plugin sends no body on Untitled documents.

2000-05-01  Chema Celorio  <chema@celorio.com>

	* plugin.c (gedit_plugins_window_add): memleaks -= 1;

	* recent.c (recent_update_menus): memleaks -= 1;

2000-05-01  Chema Celorio  <chema@celorio.com>

	* recent.c (recent_update_menus): memleaks -= 4;

	* plugin.c (gedit_plugins_window_add): memleaks -= 6;
	
	* prefs.c (prefs_determine_use_fontset): memleaks -= 1;

2000-04-29  Jason Leach  <leach@wam.umd.edu>

	* gedit.c (options): new command-line options --debug-print and
	--debug-file, to show only sections of debugging messages.
	
	* utils.h (gedit_debug): added sectioning of DEBUG_PRINT and
	DEBUG_FILE
	
	* all files: renamed gedit_debug_mess -> gedit_debug
	
	* gedit.c (options): new command-line option --debug to turn on
	debug messages in gedit, default to disable.

	* utils.h (gedit_debug): new debug stdout thingy.

	* utils.c (gedit_debug_mess): #if'd out this, it's getting
	replaced with a #define'd gedit_debug in utils.h

2000-04-29  Chema Celorio  <chema@celorio.com>

	* print.c: typo.

	* plugin.c (gedit_plugins_window_add): Memory leak fix,
	free path.

2000-04-28  Chema Celorio  <chema@celorio.com>

	* print.c (file_print_cb): Finished the word wrapping
	stuff

	* recent.c (recent_update_menus): Fix a bug that will make
	the print item in the File menu disapear when the recent
	file list was < 4. 


2000-04-27  Chema Celorio  <chema@celorio.com>

	* print.c (print_line): Started doing the word wrapping
	versus word clipping so that we can use the printing 
	code in pan.

	* menus.c (gedit_file_menu): Fixed a small bug where the