@@ -83,7 +83,7 @@ email (void)
 	Document *doc = gedit_document_current ();
 	gchar *username, *fullname, *hostname;
 	gchar *from;
-	gchar *filename_label, *filename_label_temp;
+	gchar *filename_label;
 
 	if (!doc)
 	     return;
@@ -129,14 +129,15 @@ email (void)
 		gtk_entry_set_text (GTK_ENTRY (subject_entry), _("Untitled"));
 
 	/* Set the filename label */
-	filename_label_temp = g_strdup (GTK_LABEL (glade_xml_get_widget (gui, "filename_label"))->label);
+
+	filename_label = GTK_LABEL (glade_xml_get_widget (gui, "filename_label"))->label;
+
 	if (doc->filename)
-		filename_label = g_strconcat (filename_label_temp, doc->filename, NULL);
+		filename_label = g_strconcat (filename_label, doc->filename, NULL);
 	else
-		filename_label = g_strconcat (filename_label_temp, _("Untitled"), NULL);
+		filename_label = g_strconcat (filename_label, _("Untitled"), NULL);
 	gtk_label_set_text (GTK_LABEL (glade_xml_get_widget (gui, "filename_label")),
 			    filename_label);
-	g_free (filename_label_temp);
 	g_free (filename_label);
 	
 	/* Connect the signals */
